--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node --env-file=.env dist/index.js",
-    "dev": "nodemon --env-file=.env src/index.js --exec babel-node",
-    "build": "babel src --out-dir dist --copy-files"
+    "dev": "nodemon --env-file=.env_example src/index.js --exec babel-node",
+    "build": "babel src --out-dir dist --copy-files && cp .env_example .env"
   },
   "keywords": [],
   "author": "raul",
@@ -24,12 +24,14 @@
     "sequelize": "6.37.5"
   },
   "devDependencies": {
+    "@babel/cli": "7.26.4",
     "@babel/core": "7.26.7",
     "@babel/node": "7.26.0",
     "@babel/preset-env": "7.26.7",
     "@faker-js/faker": "9.4.0",
     "colors": "1.4.0",
     "morgan": "1.10.0",
-    "nodemon": "3.1.9"
+    "nodemon": "3.1.9",
+    "standard": "17.1.0"
   }
 }
